tests/NormalTests/paczka1/small_fuzzy/10218363.err
Error in line 3: EcJ A95 49,2
Error in line 4: EcJ S375 26,9
Error in line 11: oJZWW0 A369 72,3
